@@ -36,9 +36,7 @@ import static uk.gov.hmcts.reform.prl.enums.Gender.other;
 @Component
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class ApplicationsTabServiceHelper {
-
-    @Autowired
-    ObjectMapper objectMapper;
+    private final ObjectMapper objectMapper;
 
     public List<Element<OtherPersonInTheCaseRevised>> getOtherPeopleInTheCaseRevisedTable(CaseData caseData) {
         Optional<List<Element<PartyDetails>>> otherPeopleCheck = ofNullable(caseData.getOtherPartyInTheCaseRevised());
@@ -50,12 +48,16 @@ public class ApplicationsTabServiceHelper {
             otherPersonsInTheCase.add(other);
             return otherPersonsInTheCase;
         }
-        List<PartyDetails> otherPeople = caseData.getOtherPartyInTheCaseRevised().stream().map(Element::getValue).collect(Collectors.toList());
+        List<PartyDetails> otherPeople = caseData.getOtherPartyInTheCaseRevised().stream().map(Element::getValue).toList();
         otherPeople = maskConfidentialDetails(otherPeople);
-        for (PartyDetails p : otherPeople) {
-            OtherPersonInTheCaseRevised other = objectMapper.convertValue(p, OtherPersonInTheCaseRevised.class);
+        for (PartyDetails currentOtherPerson : otherPeople) {
+            OtherPersonInTheCaseRevised otherPerson = objectMapper.convertValue(currentOtherPerson, OtherPersonInTheCaseRevised.class);
+
             Element<OtherPersonInTheCaseRevised> wrappedPerson = Element.<OtherPersonInTheCaseRevised>builder()
-                .value(other).build();
+                .value(otherPerson.toBuilder()
+                           .gender(otherPerson.getGender() != null
+                                       ? Gender.getDisplayedValueFromEnumString(otherPerson.getGender()).getDisplayedValue() : null)
+                           .build()).build();
             otherPersonsInTheCase.add(wrappedPerson);
         }
         return otherPersonsInTheCase;
@@ -77,7 +79,7 @@ public class ApplicationsTabServiceHelper {
         List<uk.gov.hmcts.reform.prl.models.complextypes.ChildDetailsRevised> childList =
             caseData.getNewChildDetails().stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
         for (uk.gov.hmcts.reform.prl.models.complextypes.ChildDetailsRevised child : childList) {
             ChildDetailsRevised c = getChildDetailsRevised(child);
             Element<ChildDetailsRevised> res = Element.<ChildDetailsRevised>builder().value(c).build();
@@ -119,7 +121,7 @@ public class ApplicationsTabServiceHelper {
         }
         List<ChildrenAndApplicantRelation> currentApplicants = caseData.getRelations().getChildAndApplicantRelations().stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
 
         for (ChildrenAndApplicantRelation applicant : currentApplicants) {
             ChildAndApplicantRelation a = objectMapper.convertValue(applicant, ChildAndApplicantRelation.class);
@@ -145,7 +147,7 @@ public class ApplicationsTabServiceHelper {
         }
         List<ChildrenAndRespondentRelation> currentApplicants = caseData.getRelations().getChildAndRespondentRelations().stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
         for (ChildrenAndRespondentRelation respondent : currentApplicants) {
             ChildAndRespondentRelation a = objectMapper.convertValue(respondent, ChildAndRespondentRelation.class);
             Element<ChildAndRespondentRelation> app = Element.<ChildAndRespondentRelation>builder().value(a).build();
@@ -170,7 +172,7 @@ public class ApplicationsTabServiceHelper {
         }
         List<ChildrenAndOtherPeopleRelation> currentApplicants = caseData.getRelations().getChildAndOtherPeopleRelations().stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
 
         for (ChildrenAndOtherPeopleRelation otherPeople : currentApplicants) {
             ChildAndOtherPeopleRelation a = objectMapper.convertValue(otherPeople, ChildAndOtherPeopleRelation.class);
@@ -211,7 +213,7 @@ public class ApplicationsTabServiceHelper {
         }
 
         List<uk.gov.hmcts.reform.prl.models.complextypes.OtherChildrenNotInTheCase> otherPeople =
-            caseData.getChildrenNotInTheCase().stream().map(Element::getValue).collect(Collectors.toList());
+            caseData.getChildrenNotInTheCase().stream().map(Element::getValue).toList();
 
         for (uk.gov.hmcts.reform.prl.models.complextypes.OtherChildrenNotInTheCase p : otherPeople) {
             OtherChildrenNotInTheCase other = objectMapper.convertValue(p, OtherChildrenNotInTheCase.class);
